--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/project-13.jpg" alt="">
 							<div class="projects_text">
-								<a href="https://cafebazaar.ir/app/com.blackoak.kiako"><h4>Kiako</h4></a>
+								<a href="https://cafebazaar.ir/app/com.blackoak.kiako" target="_blank"><h4>Kiako</h4></a>
 								<p>Software analyzer and designer, client-side developer, game designer, ui artist, back-end consultant.</p>
 							</div>
 						</div>
