--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 							<div class="welcome_text">
 									<div class="f_widget social_widget" style="margin-top: -30px;margin-bottom:30px;">
 										<ul class="list">
+											<li><a href="https://github.com/djavadihamid" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 											<li><a href="http://t.me/hamid_djavadi" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
 											<li><a href="mailto:djavadi.hamid@yandex.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
 										</ul>
@@ -465,6 +466,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					</div>
         					<p>Let's be social</p>
         					<ul class="list">
+								<li><a href="https://github.com/djavadihamid" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 								<li><a href="http://t.me/hamid_djavadi" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
 								<li><a href="mailto:djavadi.hamid@yandex.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
         					</ul>
