a little change in role

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
 							<div class="projects_text">
 								<a href="https://play.google.com/store/apps/details?id=com.pantherAndLeopard.mergeCars&hl=en" target="_blank"><h4>Merge Car</h4></a>
-								<p>Unity c# analyzer, designer and developer </p>
+								<p>Unity c# developer </p>
 							</div>
 						</div>
 					</div>
