FEAT: adding two skills: logging and extending editor

--- a/index.html
+++ b/index.html
@@ -159,12 +159,27 @@
 
 					<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
+        					<i class="fa fa-wrench" aria-hidden="true"></i>
+        					<h4>Extending editor</h4>
+        					<p>A handy tool can definitely accelerate the development process. If i am not exaggerating, It it as important as business implementation. By editor scripting, Unity can handle lots of jobs that maybe developers do without automation.</p>
+        				</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
         					<i class="fa fa-database" aria-hidden="true"></i>
         					<h4>Handling data via local Database (Sqlite)</h4>
         					<p>Handling and saving all data with playerPrefs is not that wise; Also, working with a database is not as easy as playerPrefs. However it can be a peace of cake with 3-layer structure (DataAccess-Entity-Service).</p>
         				</div>
 					</div>
 
+					<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="fa fa-history" aria-hidden="true"></i>
+        					<h4>The art of logging</h4>
+        					<p>"Where is the bugs?! I cannot find them! I have to spend time to find a simple bug!!!"<br /> Familiar dialogs uh? But knowing how to print pretty logs can help teams to save time finding and resolving bugs and errors as fast as possible.</p>
+        				</div>
+					</div>
 
 					<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
