[REFACTOR][PORTFOLIO] adding atalMatal and removing mini games of it.

--- a/index.html
+++ b/index.html
@@ -216,15 +216,6 @@
 					</div>
 				</div>
 
-				<!-- <div class="col-lg-4 col-md-6">
-        				<div class="feature_item">
-        					<i class="fa fa-list-alt" aria-hidden="true"></i>
-        					<h4>Frontend web development</h4>
-        					<p>This is where I start the journey in development world! Html, Css, JavaScript, Jquery, Bootstrap And Vue.Js (SPA) are what I can work with to create a neat responsive template.</p>
-        				</div>
-        			</div> -->
-
-
 				<div class="col-lg-4 col-md-6">
 					<div class="feature_item">
 						<i class="fa fa-git"></i>
@@ -278,15 +269,7 @@
 		<div class="container">
 			<div class="main_title">
 				<h2>What I Have done (Selected)</h2>
-				<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p> -->
 			</div>
-			<!-- <div class="projects_fillter">
-					<ul class="filter list">
-						<li class="active" data-filter="*"><a href="#">All Categories</a></li>
-						<li data-filter=".game"><a href="#">Game</a></li>
-						<li data-filter=".other"><a href="#">Other</a></li>
-					</ul>
-				</div> -->
 			<div class="projects_inner row">
 
 				<div class="col-lg-4 col-sm-6 game">
@@ -318,17 +301,6 @@
 				</div>
 
 				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://www.aparat.com/v/I98mc" target="_blank">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
-							<div class="projects_text">
-								<h4>Toxic</h4>
-								<p>Unity C# developer + lighting and composition</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-sm-6 game">
 					<a href="https://play.google.com/store/apps/details?id=com.pantherAndLeopard.mergeCars&hl=en"
 						target="_blank">
 						<div class="projects_item">
@@ -342,6 +314,35 @@
 						</div>
 					</a>
 				</div>
+
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://cafebazaar.ir/app/com.sebyan.atalmatal" target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/projects/projects-9.jpg" alt="">
+							<div class="projects_text">
+
+								<h4>Atal Matal</h4>
+
+								<p>Unity c# developer </p>
+							</div>
+						</div>
+					</a>
+				</div>
+
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://www.aparat.com/v/I98mc" target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
+							<div class="projects_text">
+								<h4>Toxic</h4>
+								<p>Unity C# developer + lighting and composition</p>
+							</div>
+						</div>
+					</a>
+				</div>
+				
 				<div class="col-lg-4 col-sm-6 game">
 					<a href="https://www.aparat.com/v/JwiW0" target="_blank">
 						<div class="projects_item">
@@ -349,58 +350,6 @@
 							<div class="projects_text">
 								<h4>the tresure</h4>
 								<p>Unity C# developer</p>
-							</div>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://www.aparat.com/v/VKjW5" target="_blank">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-4.jpg" alt="">
-							<div class="projects_text">
-								<h4>Jump Jump</h4>
-								<p>Unity C# developer + Game designer </p>
-							</div>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://www.aparat.com/v/J93OY" target="_blank">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-5.jpg" alt="">
-							<div class="projects_text">
-								<h4>Jim's Fly</h4>
-								<p>Unity C# developer + Game designer </p>
-							</div>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://www.aparat.com/v/cMD97" target="_blank">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-6.jpg" alt="">
-							<div class="projects_text">
-
-								<h4>Build tower</h4>
-
-								<p>Unity C# developer + Game designer </p>
-							</div>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://www.aparat.com/v/2YqSG" target="_blank">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-7.jpg" alt="">
-							<div class="projects_text">
-
-								<h4>Dan's Car</h4>
-
-								<p>Unity C# developer + Game designer </p>
 							</div>
 						</div>
 					</a>
@@ -419,117 +368,12 @@
 						</div>
 					</a>
 				</div>
-
-
-				<!-- <div class="col-lg-4 col-sm-6 game">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-8.jpg" alt="">
-							<div class="projects_text">
-								<a href="https://youtu.be/KJvt_ahFcII" target="_blank"><h4>Match pair</h4></a>
-								<p>2D - Card game</p>
-							</div>
-						</div>
-					</div> -->
-
-				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://www.aparat.com/v/0Tnxg" target="_blank">
-						<div class="projects_item">
-
-							<img class="img-fluid" src="img/projects/projects-9.jpg" alt="">
-							<div class="projects_text">
-								<h4>Acceleration</h4>
-								<p>Unity C# developer + Game designer </p>
-							</div>
-
-						</div>
-					</a>
-				</div>
-
-				<!-- 					<div class="col-lg-4 col-sm-6 other">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-10.jpg" alt="">
-							<div class="projects_text">
-								<a onclick="alert('Need some days to ask the owner of this product to allow for publishing this.')"><h4>Api Samples</h4></a>
-								<p>Laravel - Rest</p>
-							</div>
-						</div>
-					</div>
-
-
-					<div class="col-lg-4 col-sm-6 other">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-11.jpg" alt="">
-							<div class="projects_text">
-								<a onclick="alert('Need some days to ask the owner of this product to allow for publishing this.')"><h4>Api Samples</h4></a>
-								<p>Laravel - Rest</p>
-							</div>
-						</div>
-					</div> -->
-
-
-				<!-- <div class="col-lg-4 col-sm-6 other">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-11.jpg" alt="">
-							<div class="projects_text">
-								<a onclick="alert('Need some days to ask the owner of this product to allow for publishing this.')"><h4>Frontend web dev</h4></a>
-								<p>Html-Css-Js-Jquery-Bootstrap</p>
-							</div>
-						</div>
-					</div> -->
-
-
-
 			</div>
 		</div>
 	</section>
 	<!--================End Projects Area =================-->
 
-	<!-- ================Testimonials Area =================
-        <section class="testimonials_area p_120" style="background-color: white;">
-        	<div class="container">
-        		<div class="main_title">
-        			<h2>Testimonials</h2>
-        		</div>
-        		<div class="testi_inner">
-					<div class="testi_slider owl-carousel">
-						<div class="item">
-							<div class="testi_item">
-								<p>It was a great experieance to work with hamid</p>
-								<h4>Mahdi Folan <br /> CEO Of somethingMe</h4>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star-half-o"></i></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testi_item">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel across her face</p>
-								<h4>Fanny Spencer</h4>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star-half-o"></i></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testi_item">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel across her face</p>
-								<h4>Fanny Spencer</h4>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star-half-o"></i></a>
-							</div>
-						</div>
-					</div>
-        		</div>
-        	</div>
-        </section>-->
-	<!--================End Testimonials Area =================-->
+        
 
 	<!--================Footer Area =================-->
 	<footer class="footer_area p_120">
@@ -569,26 +413,6 @@
 						</ul>
 					</aside>
 				</div>
-
-
-				<div class="col-lg-5 col-sm-6">
-					<!-- <aside class="f_widget news_widget">
-								<div class="f_title">
-									<h3>Newsletter</h3>
-								</div>
-								<p>Stay updated with our latest trends</p>
-								<div id="mc_embed_signup">
-									<form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
-										<div class="input-group d-flex flex-row">
-											<input name="EMAIL" placeholder="Enter email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-											<button class="btn sub-btn"><span class="lnr lnr-arrow-right"></span></button>		
-										</div>				
-										<div class="mt-10 info"></div>
-									</form>
-								</div>
-							</aside> -->
-				</div>
-
 
 
 			</div>
