[FEAT][OPEN_SOURCE_PROJECTS] open source projects has been added

--- a/index.html
+++ b/index.html
@@ -264,11 +264,13 @@
 	</section>
 	<!--================End Feature Area =================-->
 
+
+
 	<!--================Projects Area =================-->
 	<section class="projects_area p_120" style="background-color: #f9f9ff;">
 		<div class="container">
 			<div class="main_title">
-				<h2>What I Have done (Selected)</h2>
+				<h2>Game projects</h2>
 			</div>
 			<div class="projects_inner row">
 
@@ -375,6 +377,54 @@
 
         
 
+
+	<section class="projects_area p_120" style="background-color: #f9f9ff;">
+		<div class="container">
+			<div class="main_title">
+				<h2>Open source projects</h2>
+			</div>
+			<div class="projects_inner row">
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://djavadihamid.github.io/HamiUnityObserver" target="_blank">
+					<div class="projects_item">
+						<img class="img-fluid" src="img/openSourceProjects/HamiUnityObserver.jpg" alt="">
+					</div>
+					</a>
+				</div>
+
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://djavadihamid.github.io/HamiSingletons/" target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/openSourceProjects/HamiSingleton.jpg" alt="">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://djavadihamid.github.io/HamiUnityFont"
+						target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/openSourceProjects/HamiUnityFont.jpg" alt="">
+						</div>
+					</a>
+				</div>
+
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://djavadihamid.github.io/HamiBash/" target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/openSourceProjects/HamiUnityBash.jpg" alt="">
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--================End Projects Area =================-->
+
+
 	<!--================Footer Area =================-->
 	<footer class="footer_area p_120">
 		<div class="container">
@@ -384,8 +434,9 @@
 						<div class="f_title">
 							<h3>About Me</h3>
 						</div>
-						<p>The day I was born, the very forests around my birth place whispered something, Game
-							developer! </p>
+						<p>A Bug is never just a mistake. It represent something bigger. An error of thinking that
+							makes you who you are.
+						</p>
 						<p>
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							Copyright &copy;
