[FEAT] add youtube and more btn

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="vendors/animate-css/animate.css">
 	<link rel="stylesheet" href="vendors/flaticon/flaticon.css">
 	<!-- main css -->
+	<link rel="stylesheet" href="css/customCss.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
 
@@ -88,38 +89,17 @@
 
 						<div class="welcome_text">
 							<div class="f_widget social_widget" style="margin-top: -30px;margin-bottom:30px;">
+								<br>
 								<ul class="list">
 									<li><a href="https://github.com/djavadihamid" target="_blank"><i
-												class="fa fa-github" aria-hidden="true"></i></a></li>
-									<li><a href="http://t.me/hamid_djavadi" target="_blank"><i class="fa fa-telegram"
-												aria-hidden="true"></i></a></li>
+										class="fa fa-github  link_icons" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.youtube.com/channel/UCr7kaTR-hYeWPJuMi4HvZog/featured?view_as=subscriber" target="_blank"><i
+										class="fa fa-youtube link_icons"></i></a></li>
 									<li><a href="mailto:djavadi.hamid@yandex.com" target="_blank"><i
-												class="fa fa-envelope"></i></a></li>
+												class="fa fa-envelope link_icons"></i></a></li>
 								</ul>
 							</div>
-							<div class="row">
-								<div class="col-md-4">
-									<div class="wel_item">
-										<span class="lnr lnr-sort-amount-asc"></span>
-										<h4>40K</h4>
-										<p>Total lines Of code in game development</p>
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="wel_item">
-										<span class="lnr lnr-code"></span>
-										<h4>750</h4>
-										<p>Total Commits in Git Version Control System</p>
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="wel_item">
-										<span class="lnr lnr-clock"></span>
-										<h4>10300</h4>
-										<p>Total Hours </br> spent on development</p>
-									</div>
-								</div>
-							</div>
+						
 						</div>
 
 
@@ -296,7 +276,7 @@
 
 								<h4>Agile dot</h4>
 
-								<p>Game designer, gameplay and ui artist, Backend developer, client-side consultant</p>
+								<p>Game designer, gameplay and ui artist, Backend developer, client-side developer and consultant</p>
 							</div>
 						</div>
 					</a>
@@ -386,7 +366,7 @@
 			<div class="projects_inner row">
 
 				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://djavadihamid.github.io/HamiUnityObserver" target="_blank">
+					<a href="https://github.com/djavadihamid/HamiUnityObserver" target="_blank">
 					<div class="projects_item">
 						<img class="img-fluid" src="img/openSourceProjects/HamiUnityObserver.jpg" alt="">
 					</div>
@@ -395,7 +375,7 @@
 
 
 				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://djavadihamid.github.io/HamiSingletons/" target="_blank">
+					<a href="https://github.com/djavadihamid/HamiSingletons" target="_blank">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/openSourceProjects/HamiSingleton.jpg" alt="">
 						</div>
@@ -403,7 +383,7 @@
 				</div>
 
 				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://djavadihamid.github.io/HamiUnityFont"
+					<a href="https://github.com/djavadihamid/HamiUnityFont"
 						target="_blank">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/openSourceProjects/HamiUnityFont.jpg" alt="">
@@ -413,9 +393,17 @@
 
 
 				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://djavadihamid.github.io/HamiBash/" target="_blank">
+					<a href="https://github.com/djavadihamid/HamiBash" target="_blank">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/openSourceProjects/HamiUnityBash.jpg" alt="">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://github.com/djavadihamid/" target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/openSourceProjects/viewMore.jpg" alt="">
 						</div>
 					</a>
 				</div>
@@ -448,19 +436,20 @@
 					</aside>
 				</div>
 
-				<div class="col-lg-2">
+				<div class="col-lg-4">
 					<aside class="f_widget social_widget">
 						<div class="f_title">
 							<h3>Follow Me</h3>
 						</div>
 						<p>Let's be social</p>
 						<ul class="list">
-							<li><a href="https://github.com/djavadihamid" target="_blank"><i class="fa fa-github"
-										aria-hidden="true"></i></a></li>
-							<li><a href="http://t.me/hamid_djavadi" target="_blank"><i class="fa fa-telegram"
-										aria-hidden="true"></i></a></li>
+							<li><a href="https://github.com/djavadihamid" target="_blank"><i
+								class="fa fa-github  link_icons" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCr7kaTR-hYeWPJuMi4HvZog/featured?view_as=subscriber" target="_blank"><i
+								class="fa fa-youtube link_icons"></i></a></li>
 							<li><a href="mailto:djavadi.hamid@yandex.com" target="_blank"><i
-										class="fa fa-envelope"></i></a></li>
+										class="fa fa-envelope link_icons"></i></a></li>
+
 						</ul>
 					</aside>
 				</div>
