updating kiako to balout

--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
 			<div class="projects_inner row">
 
 				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://cafebazaar.ir/app/com.blackoak.kiako" target="_blank">
+					<a href="https://cafebazaar.ir/app/com.blackoak.balout" target="_blank">
 					<div class="projects_item">
 						<img class="img-fluid" src="img/projects/project-13.jpg" alt="">
 						<div class="projects_text">
-							<h4>Kiako</h4>
-							<p>Software analyzer and designer, client-side developer, game designer, ui artist, back-end
+							<h4>Balout</h4>
+							<p>Product manager, client-side developer, game designer, back-end
 								consultant.</p>
 						</div>
 					</div>
@@ -273,10 +273,8 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-0.jpg" alt="">
 							<div class="projects_text">
-
 								<h4>Agile dot</h4>
-
-								<p>Game designer, gameplay and ui artist, Backend developer, client-side developer and consultant</p>
+								<p>Product manager, Game designer, gameplay and ui artist, Backend developer, client-side developer and consultant</p>
 							</div>
 						</div>
 					</a>
@@ -288,9 +286,7 @@
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-2.jpg" alt="">
 							<div class="projects_text">
-
 								<h4>Merge Car</h4>
-
 								<p>Unity c# developer </p>
 							</div>
 						</div>
@@ -381,16 +377,6 @@
 						</div>
 					</a>
 				</div>
-
-				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://github.com/djavadihamid/HamiUnityFont"
-						target="_blank">
-						<div class="projects_item">
-							<img class="img-fluid" src="img/openSourceProjects/HamiUnityFont.jpg" alt="">
-						</div>
-					</a>
-				</div>
-
 
 				<div class="col-lg-4 col-sm-6 game">
 					<a href="https://github.com/djavadihamid/HamiBash" target="_blank">
