[FEAT] adding and completing header

--- a/index.html
+++ b/index.html
@@ -73,37 +73,66 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6">
-						<div class="home_left_img">
-							<img src="img/banner/home-left-1.png" alt="">
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="banner_content" style="margin-top: 200px;">
-							<h5>This is me</h5>
+						<div class="banner_content" style="margin-top: 30px;">
+							<!-- <h5>This is me</h5> -->
 							<h2>Hamid Djavadi</h2>
 							<h4 style="margin-top: -20px; margin-bottom:40px;">Full-Stack Unity Game Developer</h4>
 							<p>A Bug is never just a mistake. It represent something bigger. An error of thinking that
 								makes you who you are.
 							</p>
 						</div>
+					</div>
 
+
+					<div class="col-lg-6" style="margin-top: 150px;margin-bottom: 40px;">
 						<div class="welcome_text">
-							<div class="f_widget social_widget" style="margin-top: -30px;margin-bottom:30px;">
-								<br>
-								<ul class="list">
-									<li><a href="https://github.com/djavadihamid" target="_blank"><i
-												class="fa fa-github  link_icons" aria-hidden="true"></i></a></li>
-									<li><a href="https://www.youtube.com/channel/UCr7kaTR-hYeWPJuMi4HvZog/featured?view_as=subscriber"
-											target="_blank"><i class="fa fa-youtube link_icons"></i></a></li>
-									<li><a href="mailto:djavadi.hamid@yandex.com" target="_blank"><i
-												class="fa fa-envelope link_icons"></i></a></li>
-								</ul>
+							<div class="row">
+								<div class="col-md-4">
+									<div class="wel_item">
+										<i class="lnr lnr-code"></i>
+										<h4>5 Years</h4>
+										<p>Experience
+											<br><br>
+										</p>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="wel_item">
+										<i class="lnr lnr-graduation-hat"></i>
+										<h4>BS</h4>
+										<p>in software engineering</p>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="wel_item">
+										<i class="lnr lnr-graduation-hat"></i>
+										<h4>MS</h4>
+										<p>student in software eng.</p>
+									</div>
+								</div>
 							</div>
 
+							<div class="row" style="margin-top: 20px;">
+								<div class="col-md-4">
+									<div class="wel_item">
+										<i class="lnr lnr-users"></i>
+										<h4>ENTJ</h4>
+										<p>In MBTI</p>
+									</div>
+								</div>
+
+								<div class="col-md-4">
+									<div class="wel_item">
+										<i class="lnr lnr-funnel"></i>
+										<h4 style="font-size: 20px;">Basketball</h4>
+										<p>Player</p>
+									</div>
+								</div>
+							</div>
+							
 						</div>
-
-
 					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -123,7 +152,7 @@
 						<i class="fa fa-cubes" aria-hidden="true"></i>
 						<h4>Modularity</h4>
 						<p>Almost all the codes that are in-common among projects are in their own project. Here is the
-							list of what required modules I made though these years under a framework:
+							list of what required modules I made through these years under a framework:
 							<br>
 							<b class="BoldDark">
 								Ad, Auth, SqliteORM, IAP, DiUtility, Build, Const, CsGenerator, Currency, Databaes,
@@ -241,12 +270,20 @@
 							<br>
 							<b class="BoldDark">
 								Admob, UnityAds, Firebase, AppMetrica, GameAnalytics, Unity IAP, Tapsell, Tapsell plus,
-								CafeBazaar IAP, Zarinpal, Myket IAP, AdTrace, Sentry,
+								CafeBazaar IAP, Zarinpal, Myket IAP, AdTrace, Sentry
 							</b>
+							and etc.
 						</p>
 					</div>
 				</div>
 
+				<div class="col-lg-4 col-md-6">
+					<div class="feature_item">
+						<i class="fa fa-thumbs-up" aria-hidden="true"></i>
+						<h4>Test runner</h4>
+						<p>Using this tool, there is no need to manually test everything after build and before releasing.</p>
+					</div>
+				</div>
 
 				<div class="col-lg-4 col-md-6">
 					<div class="feature_item">
@@ -323,7 +360,7 @@
 							<br>
 							<b class="BoldDark">Controller, Service, Repository, ORM(Efcore) and Database.</b>
 							<br>
-							Controllers should be minimal; Service do all business related jobs and Repository do all Data related ones.
+							Controllers should be minimal and according to specific client needs; Service do all business related jobs and Repository do all Data related ones.
 						</p>
 					</div>
 				</div>
@@ -335,7 +372,7 @@
 						<p>
 							Ok, this is the rule: <b class="BoldDark">Adding or removing a business part should not make an error!</b>
 							<br>
-							By this rule, application should be writting based on abstraction.
+							By this rule, application should be written based on abstraction.
 						</p>
 					</div>
 				</div>
@@ -377,6 +414,17 @@ Also experienced in <b class="BoldDark">automated code update, build and deploye
 
 				<div class="col-lg-4 col-md-6">
 					<div class="feature_item">
+						<i class="fa fa-television" aria-hidden="true"></i>
+						<h4>Monitoring</h4>
+						<p>
+							Using tools like <b class="BoldDark">top, htop, bmon and Netdata</b>, everything would be under control.
+						</p>
+					</div>
+				</div>
+
+
+				<div class="col-lg-4 col-md-6">
+					<div class="feature_item">
 						<i class="fa fa-dashboard" aria-hidden="true"></i>
 						<h4>Frontend</h4>
 						<p>
@@ -407,7 +455,7 @@ Also experienced in <b class="BoldDark">automated code update, build and deploye
 						<i class="fa fa-list" aria-hidden="true"></i>
 						<h4>Swagger</h4>
 						<p>
-This is a great tool to generate api documentation. A great way to communicate with client side developers.
+This is a <b class="BoldDark">great tool to generate api documentation</b>. A great way to communicate with client side developers.
 						</p>
 					</div>
 				</div>
@@ -501,9 +549,9 @@ This is a great tool to generate api documentation. A great way to communicate w
 					<div class="feature_item">
 						<i class="fa fa-volume-up" aria-hidden="true"></i>
 						<h4>Public speaking</h4>
-						<p>No one can describe my potential in doing so. <b class="BoldDark">Experienced talking in
+						<p>No one can describe my potential in doing so. <b class="BoldDark">Experienced in talking in
 								front of Entrepreneurs,
-								students, team, and family</b> are what I love.</p>
+								students, team, and family</b> are the things I love.</p>
 					</div>
 				</div>
 
