[FEAT] projects updated

--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6">
-						<div class="banner_content" style="margin-top: 30px;">
+						<div class="banner_content" style="margin-top: 200px;">
 							<!-- <h5>This is me</h5> -->
-							<h2>Hamid Djavadi</h2>
+							<h2 style="font-family: belinday;text-transform: none;font-size: 75px;">Hamid Djavadi</h2>
+							<br><br>
+							<br>
+							<br><br>
 							<h4 style="margin-top: -20px; margin-bottom:40px;">Full-Stack Unity Game Developer</h4>
 							<p>A Bug is never just a mistake. It represent something bigger. An error of thinking that
 								makes you who you are.
@@ -573,11 +576,10 @@ This is a <b class="BoldDark">great tool to generate api documentation</b>. A gr
 				<div class="col-lg-4 col-sm-6 game">
 					<a href="https://cafebazaar.ir/app/com.blackoak.balout" target="_blank">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/project-13.jpg" alt="">
+							<img class="img-fluid" src="img/projects/Project_CowerCard.jpg" alt="">
 							<div class="projects_text">
-								<h4>Balout</h4>
-								<p>Product manager, client-side developer, game designer, back-end
-									consultant.</p>
+								<h4>Cower</h4>
+								<p>Product manager, client-side developer, back-end developer.</p>
 							</div>
 						</div>
 					</a>
@@ -585,13 +587,26 @@ This is a <b class="BoldDark">great tool to generate api documentation</b>. A gr
 
 
 				<div class="col-lg-4 col-sm-6 game">
-					<a href="https://cafebazaar.ir/app/com.kbs.agileDot" target="_blank">
+					<a href="https://cafebazaar.ir/app/com.blackoak.balout" target="_blank">
 						<div class="projects_item">
-							<img class="img-fluid" src="img/projects/projects-0.jpg" alt="">
+							<img class="img-fluid" src="img/projects/project-hyperCasual.jpg" alt="">
 							<div class="projects_text">
-								<h4>Agile dot</h4>
-								<p>Product manager, Game designer, gameplay and ui artist, Backend developer,
-									client-side developer and consultant</p>
+								<h4>Rombling</h4>
+								<p>client-side developer, game designer</p>
+							</div>
+						</div>
+					</a>
+				</div>
+
+
+				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://cafebazaar.ir/app/com.blackoak.balout" target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/projects/project-13.jpg" alt="">
+							<div class="projects_text">
+								<h4>Balout</h4>
+								<p>Product manager, client-side developer, back-end
+									consultant.</p>
 							</div>
 						</div>
 					</a>
@@ -612,6 +627,19 @@ This is a <b class="BoldDark">great tool to generate api documentation</b>. A gr
 
 
 				<div class="col-lg-4 col-sm-6 game">
+					<a href="https://cafebazaar.ir/app/com.kbs.agileDot" target="_blank">
+						<div class="projects_item">
+							<img class="img-fluid" src="img/projects/projects-0.jpg" alt="">
+							<div class="projects_text">
+								<h4>Agile dot</h4>
+								<p>Product manager, Backend developer,
+									client-side developer</p>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-sm-6 game">
 					<a href="https://cafebazaar.ir/app/com.sebyan.atalmatal" target="_blank">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-9.jpg" alt="">
@@ -626,7 +654,7 @@ This is a <b class="BoldDark">great tool to generate api documentation</b>. A gr
 				</div>
 
 
-				<div class="col-lg-4 col-sm-6 game">
+				<!-- <div class="col-lg-4 col-sm-6 game">
 					<a href="https://www.aparat.com/v/I98mc" target="_blank">
 						<div class="projects_item">
 							<img class="img-fluid" src="img/projects/projects-1.jpg" alt="">
@@ -636,7 +664,7 @@ This is a <b class="BoldDark">great tool to generate api documentation</b>. A gr
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 
 				<div class="col-lg-4 col-sm-6 game">
 					<a href="https://www.aparat.com/v/JwiW0" target="_blank">
