[FEAT] adding nakama,photon + react to skills

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 						<p>Experienced in working with
 							<br>
 							<b class="BoldDark">
-								Admob, UnityAds, Firebase, AppMetrica, GameAnalytics, Unity IAP, Tapsell, Tapsell plus,
+								Admob, UnityAds, Firebase, Photon PUN2, Photon Voice, Nakama, AppMetrica, GameAnalytics, Unity IAP, Tapsell, Tapsell plus,
 								CafeBazaar IAP, Zarinpal, Myket IAP, AdTrace, Sentry
 							</b>
 							and etc.
@@ -332,7 +332,7 @@
 						<i class="fa fa-server" aria-hidden="true"></i>
 						<h4>Core</h4>
 						<p>
-							Every of my project should these stuff:
+							Every of my project should have these stuff:
 							<br>
 							<b class="BoldDark">
 							Versioning, Automatic validation, Jwt Authentication, Autofac, Versioning
@@ -449,7 +449,7 @@ Also experienced in <b class="BoldDark">automated code update, build and deploye
 						<p>
 							Able to implement dashboard or website theme using:
 							<br>
-							<b class="BoldDark">Razor, Html, Css, JavaScript, Bootstrap, JQuery</b>
+							<b class="BoldDark">Razor, React, Html, Css, JavaScript, Bootstrap, JQuery</b>
 						</p>
 					</div>
 				</div>
