[FIX] adding images of 2 more projects

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 								<a href="img/projects/Cowercard2.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/Cowercard2.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/projects/Cowercard3.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/Cowercard3hell.jpg);"></div></a>
+								<a href="img/projects/Cowercard3.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/Cowercard3.jpg);"></div></a>
 							</div>
 						</div>
 					</div>
@@ -521,13 +521,13 @@
 
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/projects/treasure1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/treasure1.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/projects/treasure2.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/treasure2.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/projects/treasure3.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/treasure3.jpg);"></div></a>
 							</div>
 						</div>
 					</div>
@@ -561,13 +561,13 @@
 
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/projects/spaceFighter1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/spaceFighter1.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/projects/spaceFighter2.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/spaceFighter2.jpg);"></div></a>
 							</div>
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/projects/spaceFighter3.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/projects/spaceFighter3.jpg);"></div></a>
 							</div>
 						</div>
 					</div>
