add line height for name in mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="banner_content" style="margin-top: 100px;">
-							<h2 style="margin-left:20px;font-family: belinday;text-transform: none;font-size: 75px;">Hamid Djavadi</h2>
+							<h2 id="my-name" style="margin-left:20px;font-family: belinday;text-transform: none;font-size: 75px;">Hamid Djavadi</h2>
 							<br><br>
 							<br>
 							<br><br>
